.infrastructure/ingress/ingress.yml
apiVersion: networking.k8s.io/v1 # solve
kind: Ingress
metadata:
  name: todoapp-service
  namespace: todoapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: todoapp-service
                port:
                  number: 80
